--- a/template.yaml
+++ b/template.yaml
@@ -93,7 +93,18 @@ spec:
       input:
         repoUrl: "{{ '${{ parameters.repo.host }}' }}?owner={{ '${{ parameters.repo.owner }}' }}&repo={{ '${{parameters.component_id}}' }}"
         repoVisibility: public
+
+    - id: register
+      name: Register
+      action: catalog:register
+      input:
+        repoContentsUrl: {{ '${{ steps.publish.output.repoContentsUrl }}' }}
+        catalogInfoPath: "/catalog-info.yaml"
+
   output:
     links:
       - title: Source Code Repository
         url: {{ '${{ steps.publish.output.remoteUrl }}' }}
+      - title: Open Component in catalog
+        icon: catalog
+        entityRef: {{ '${{ steps.register.output.entityRef }}' }}
