--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -24,7 +24,7 @@ metadata:
       icon: web
 spec:
   type: service
-  lifecycle: production
+  lifecycle: development
   owner: ${{values.owner | dump}}
   providesApis:
     - ${{values.component_id | dump}}
@@ -38,7 +38,7 @@ metadata:
   {%- endif %}
 spec:
   type: openapi
-  lifecycle: production
+  lifecycle: development
   owner: ${{values.owner | dump}}
   definition:
     $text: ./openapi.yaml
