Template and publish gitops manifests

--- a/template.yaml
+++ b/template.yaml
@@ -45,6 +45,52 @@ spec:
           type: string
           description: Help others understand what this website is for.
           default: A cool quarkus app
+    - title: Provide Image Registry Information
+      required:
+        - image_registry
+      properties:
+        image_registry:
+          title: Image Registry
+          type: string
+          enum:
+            - Openshift
+            - Quay
+      dependencies:
+        image_registry:
+          oneOf:
+            - properties:
+                image_registry:
+                  enum:
+                    - Openshift
+                image_host:
+                  title: Image Host
+                  type: string
+                  description: Host for storing image
+                  default: image-registry.openshift-image-registry.svc:5000
+                image_tag:
+                  title: Image Tag
+                  default: latest
+                  type: string
+                  description: Build Image tag
+            - properties:
+                image_registry:
+                  enum:
+                    - Quay
+                image_host:
+                  title: Image Host
+                  type: string
+                  description: Host for storing image
+                  default: {{ quay_host }}
+                image_organization:
+                  title: Organization
+                  type: string
+                  description: Name of the Quay Organization
+                  default: quayadmin
+                image_tag:
+                  title: Image Tag
+                  default: latest
+                  type: string
+                  description: Build Image tag
     - title: Application repository Information
       required:
         - repo
@@ -84,15 +130,17 @@ spec:
           owner: {{ '${{ user.entity.metadata.name }}' }}
           cluster: {{ cluster_subdomain }}
           host: {{ '${{ parameters.repo.host }}' }}
-          destination: {{ '${{ parameters.repo.owner }}' }}/{{ '${{ parameters.component_id }}' }}
+          destination: {{ '${{ parameters.repo.owner }}' }}/{{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}
           port: 8080
+      targetPath: {{ './${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}
 
     - id: publish
       name: Publish
       action: publish:gitlab
       input:
-        repoUrl: "{{ '${{ parameters.repo.host }}' }}?owner={{ '${{ parameters.repo.owner }}' }}&repo={{ '${{parameters.component_id}}' }}"
+        repoUrl: "{{ '${{ parameters.repo.host }}' }}?owner={{ '${{ parameters.repo.owner }}' }}&repo={{ '${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}"
         repoVisibility: public
+        sourcePath: {{ './${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}
 
     - id: register
       name: Register
@@ -100,6 +148,37 @@ spec:
       input:
         repoContentsUrl: {{ '${{ steps.publish.output.repoContentsUrl }}' }}
         catalogInfoPath: "/catalog-info.yaml"
+
+    - id: template-gitops-deployment
+      name: Generating Deployment Resources
+      action: fetch:template
+      input:
+        url: ./manifests
+        copyWithoutTemplating: []
+        values:
+          component_id: {{ '${{ parameters.component_id }}' }}
+          source_repository: https://{{ '${{ parameters.repo.host }}' }}/{{ '${{ parameters.repo.owner }}' }}/{{ '${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}.git
+          owner: {{ '${{ user.entity.metadata.name }}' }}
+          namespace: {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}-dev
+          image_registry: {{ '${{ parameters.image_registry }}' }}
+          image_host: {{ '${{ parameters.image_host }}' }}
+          image_organization: {{ '${{ parameters.image_organization }}' }}
+          image_name: {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}
+          image_tag: {{ '${{ parameters.image_tag }}' }}
+          gitops_namespace: {{ rhdh_gitops_namespace }}
+          gitops_project: {{ rhdh_gitops_project }}
+          port: 8080
+        targetPath: {{ './${{ user.entity.metadata.name }}-${{parameters.component_id}}-gitops' }}
+
+    - id: publish-gitops
+      name: Publishing to Resource Repository
+      action: publish:gitlab
+      input:
+        repoUrl: "{{ '${{ parameters.repo.host }}' }}?owner={{ '${{ parameters.repo.owner }}' }}&repo={{ '${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}-gitops"
+        title: gitops resources for {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}
+        description: gitops resources for {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}
+        sourcePath: {{ './${{ user.entity.metadata.name }}-${{parameters.component_id}}-gitops' }}
+        repoVisibility: public
 
   output:
     links:
