--- a/manifests/helm/quarkus-template/templates/serviceaccount.yaml
+++ b/manifests/helm/quarkus-template/templates/serviceaccount.yaml
@@ -9,6 +9,8 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- with .Values.imagePullSecrets }}
 imagePullSecrets:
-  - name: image-registry-creds
+  {{- toYaml . | nindent 2 }}
+{{- end }}
 {{- end }}
