--- a/manifests/helm/quarkus-template/templates/rolebinding.yaml
+++ b/manifests/helm/quarkus-template/templates/rolebinding.yaml
@@ -2,12 +2,12 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ${{values.owner}}-{{ .Release.Namespace }}
+  name: {{ .Values.user }}-{{ .Release.Namespace }}
   namespace: {{ .Release.Namespace }}
 subjects:
   - apiGroup: rbac.authorization.k8s.io
     kind: User
-    name: ${{values.owner}}
+    name: {{ .Values.user }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
