--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -16,10 +16,10 @@ metadata:
     - java
     - quarkus
   links:
-    - url: https://devspaces${{values.cluster}}/#https://${{values.host}}/${{values.destination}}
+    - url: https://devspaces.${{values.cluster}}/#https://${{values.host}}/${{values.destination}}
       title: OpenShift Dev Spaces (VS Code)
       icon: web
-    - url: https://devspaces${{values.cluster}}/#https://${{values.host}}/${{values.destination}}?che-editor=che-incubator/che-idea/latest
+    - url: https://devspaces.${{values.cluster}}/#https://${{values.host}}/${{values.destination}}?che-editor=che-incubator/che-idea/latest
       title: OpenShift Dev Spaces (JetBrains IntelliJ)
       icon: web
 spec:
