Added resync task to pipeline

--- a/manifests/helm/quarkus-build/templates/pipeline-build.yaml
+++ b/manifests/helm/quarkus-build/templates/pipeline-build.yaml
@@ -64,6 +64,12 @@ spec:
           workspace: source-folder
         - name: dockerconfig
           workspace: docker-config
+    - name: resync
+      runAfter:
+        - build-and-push-image
+      taskRef:
+        kind: Task
+        name: resync
   workspaces:
     - name: source-folder
     - name: maven-settings
