--- a/manifests/helm/quarkus-template/values.yaml
+++ b/manifests/helm/quarkus-template/values.yaml
@@ -6,11 +6,11 @@ replicaCount: 1
 
 image:
   pullPolicy: Always
-  registry: ${{values.image_registry}}
-  host: ${{values.image_host}}
-  organization: ${{values.image_organization}}
-  name: ${{values.image_name}}
-  tag: ${{values.image_tag}}
+  registry: 
+  host: 
+  organization: 
+  name: 
+  tag: 
 
 imagePullSecrets: []
 nameOverride: ""
