maven-settings workspace: no need for persistent storage

--- a/manifests/helm/quarkus-build/templates/triggertemplate-build.yaml
+++ b/manifests/helm/quarkus-build/templates/triggertemplate-build.yaml
@@ -44,13 +44,7 @@ spec:
                   requests:
                     storage: 1Gi
           - name: maven-settings
-            volumeClaimTemplate:
-              spec:
-                accessModes:
-                  - ReadWriteOnce
-                resources:
-                  requests:
-                    storage: 5Gi
+            emptydir: {}
 {{- if eq .Values.image.registry "Quay" }}
           - name: docker-config
             secret:
