source code published to user instead of group

--- a/manifests/argocd/argocd-app-dev-build.yaml
+++ b/manifests/argocd/argocd-app-dev-build.yaml
@@ -16,7 +16,8 @@ spec:
     path: ./helm/quarkus-build
     helm:
       values: |
-        nameOverride: ${{ values.owner }}-${{ values.component_id }}
+        nameOverride: ${{ values.component_id }}
+        owner: ${{ values.owner }}
         git:
           host: ${{ values.repository_host }}
           repo: ${{ values.source_repository }}
