--- a/template.yaml
+++ b/template.yaml
@@ -81,11 +81,10 @@ spec:
                   type: string
                   description: Host for storing image
                   default: {{ quay_host }}
-                image_organization:
-                  title: Organization
+                image_password:
+                  title: Password
                   type: string
-                  description: Name of the Quay Organization
-                  default: quayadmin
+                  description: Your Quay password
                 image_tag:
                   title: Image Tag
                   default: latest
@@ -158,7 +157,8 @@ spec:
           namespace: {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}-dev
           image_registry: {{ '${{ parameters.image_registry }}' }}
           image_host: {{ '${{ parameters.image_host }}' }}
-          image_organization: {{ '${{ parameters.image_organization }}' }}
+          image_organization: {{ '${{ user.entity.metadata.name }}' }}
+          image_password: {{ '${{ parameters.image_password }}' }}
           image_name: {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}
           image_tag: {{ '${{ parameters.image_tag }}' }}
           gitops_namespace: {{ rhdh_gitops_namespace }}
