--- a/template.yaml
+++ b/template.yaml
@@ -140,6 +140,7 @@ spec:
       input:
         repoUrl: "{{ '${{ parameters.repo.host }}' }}?owner={{ '${{ parameters.repo.owner }}' }}&repo={{ '${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}"
         repoVisibility: public
+        defaultBranch: main
         sourcePath: {{ './${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}
 
     - id: register
@@ -178,10 +179,11 @@ spec:
       action: publish:gitlab
       input:
         repoUrl: "{{ '${{ parameters.repo.host }}' }}?owner={{ '${{ parameters.repo.owner }}' }}&repo={{ '${{ user.entity.metadata.name }}-${{parameters.component_id}}' }}-gitops"
+        repoVisibility: public
+        defaultBranch: main
         title: gitops resources for {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}
         description: gitops resources for {{ '${{ user.entity.metadata.name }}-${{ parameters.component_id }}' }}
         sourcePath: {{ './${{ user.entity.metadata.name }}-${{parameters.component_id}}-gitops' }}
-        repoVisibility: public
 
     - id: create-argocd-resources
       name: Create ArgoCD Resources
