--- a/manifests/helm/quarkus-build/templates/external-secret-quay-config.yaml
+++ b/manifests/helm/quarkus-build/templates/external-secret-quay-config.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.image.registry "Quay" }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -11,17 +12,27 @@ spec:
       remoteRef:
         key: secrets/rhdh/registry/auth
         property: value
+    - secretKey: username
+      remoteRef:
+        key: secrets/rhdh/registry/username
+        property: value
+    - secretKey: password
+      remoteRef:
+        key: secrets/rhdh/registry/password
+        property: value
   target:
     name: {{ include "quarkus-build.name" . }}-registry-creds
     template:
-      type: Opaque
+      type: kubernetes.io/dockerconfigjson
       data:
-        config.json: |
+        .dockerconfigjson: |
           {
+            "username": "{{"{{"}} .username {{"}}"}}",
+            "password": "{{"{{"}} .password {{"}}"}}",
             "auths": {
               "{{ .Values.image.host }}": {
                 "auth": "{{"{{"}} .credentials {{"}}"}}"
               }
             }
           }
-
+{{- end }}
