--- a/manifests/helm/quarkus-template/templates/deployment.yaml
+++ b/manifests/helm/quarkus-template/templates/deployment.yaml
@@ -19,6 +19,7 @@ spec:
       {{- end }}
       labels:
         {{- include "quarkus-template.selectorLabels" . | nindent 8 }}
+        {{- include "backstage.labels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ include "quarkus-template.serviceAccountName" . }}
       securityContext:
