--- a/manifests/helm/quarkus-build/templates/job-create-webhook.yaml
+++ b/manifests/helm/quarkus-build/templates/job-create-webhook.yaml
@@ -2,6 +2,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ include "quarkus-build.name" . }}-webhook-job
+  labels:
+    {{- include "quarkus-build.labels" . | nindent 4 }}
   annotations:
     argocd.argoproj.io/sync-wave: "3"
 spec:
