--- a/manifests/helm/quarkus-build/templates/cm-create-webhook.yaml
+++ b/manifests/helm/quarkus-build/templates/cm-create-webhook.yaml
@@ -1,7 +1,9 @@
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name:  {{ include "quarkus-build.name" . }}-webhook-script
-apiVersion: v1
+  labels:
+    {{- include "quarkus-build.labels" . | nindent 4 }}
 data:
   playbook.yaml: |
     - hosts: localhost
