--- a/manifests/helm/quarkus-build/templates/external-secret-quay-config.yaml
+++ b/manifests/helm/quarkus-build/templates/external-secret-quay-config.yaml
@@ -3,6 +3,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: {{ include "quarkus-build.name" . }}-registry-creds
+  labels:
+    {{- include "quarkus-build.labels" . | nindent 4 }}
 spec:
   secretStoreRef:
     name: vault-secret-store
