--- a/manifests/helm/quarkus-build/templates/external-secret-webhook-secret.yaml
+++ b/manifests/helm/quarkus-build/templates/external-secret-webhook-secret.yaml
@@ -2,6 +2,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: {{ include "quarkus-build.name" . }}-external-webhook-secret
+  labels:
+    {{- include "quarkus-build.labels" . | nindent 4 }}
 spec:
   secretStoreRef:
     name: vault-secret-store
