--- a/manifests/helm/quarkus-build/templates/route.yaml
+++ b/manifests/helm/quarkus-build/templates/route.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/managed-by: EventListener
     app.kubernetes.io/part-of: Triggers
     eventlistener: {{ include "quarkus-build.name" . }}-el
+    {{- include "quarkus-build.labels" . | nindent 4 }}
 spec:
   to:
     kind: Service
