labels for detection by argocd plugin

--- a/manifests/argocd/argocd-app-dev.yaml
+++ b/manifests/argocd/argocd-app-dev.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: ${{ values.owner }}-${{ values.component_id }}-dev
   namespace: ${{ values.gitops_namespace }}
+  labels:
+    rht-gitops.com/${{ values.gitops_namespace }}: ${{ values.owner }}-${{ values.component_id }}
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
