fix: reference to secrets for image_password

--- a/template.yaml
+++ b/template.yaml
@@ -159,7 +159,7 @@ spec:
           image_registry: {{ '${{ parameters.image_registry }}' }}
           image_host: {{ '${{ parameters.image_host }}' }}
           image_organization: {{ '${{ user.entity.metadata.name }}' }}
-          image_password: {{ '${{ parameters.image_password }}' }}
+          image_password: {{ '${{ secrets.image_password }}' }}
           image_name: {{ '${{ parameters.component_id }}' }}
           image_tag: {{ '${{ parameters.image_tag }}' }}
           gitops_namespace: {{ rhdh_gitops_namespace }}
