Update to latest version of Tekton CRD specs

--- a/manifests/helm/quarkus-build/templates/pipeline-build.yaml
+++ b/manifests/helm/quarkus-build/templates/pipeline-build.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: Pipeline
 metadata:
   name: {{ include "quarkus-build.name" . }}-build
@@ -23,13 +23,19 @@ spec:
   tasks:
     - name: git-clone
       params:
-        - name: url
+        - name: URL
           value: $(params.source-repo)
-        - name: revision
+        - name: REVISION
           value: $(params.source-branch)
       taskRef:
-        kind: ClusterTask
-        name: git-clone    
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: git-clone
+          - name: namespace
+            value: openshift-pipelines 
       workspaces:
         - name: output
           workspace: source-folder
@@ -41,12 +47,18 @@ spec:
           value:
             - package
       taskRef:
-        kind: ClusterTask
-        name: maven
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: maven
+          - name: namespace
+            value: openshift-pipelines
       workspaces:
         - name: source
           workspace: source-folder
-        - name: maven-settings
+        - name: maven_settings
           workspace: maven-settings
     - name: build-and-push-image
       runAfter:
@@ -61,8 +73,14 @@ spec:
           value: 'false'
 {{- end }}
       taskRef:
-        kind: Task
-        name: buildah        
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: buildah
+          - name: namespace
+            value: {{ .Release.Namespace }}
       workspaces:
         - name: source
           workspace: source-folder
@@ -70,8 +88,14 @@ spec:
       runAfter:
         - build-and-push-image
       taskRef:
-        kind: Task
-        name: resync
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: resync
+          - name: namespace
+            value: {{ .Release.Namespace }}
   workspaces:
     - name: source-folder
     - name: maven-settings
