--- a/manifests/helm/quarkus-build/templates/cm-init-pipeline-run.yaml
+++ b/manifests/helm/quarkus-build/templates/cm-init-pipeline-run.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "quarkus-build.labels" . | nindent 4 }}
 data:
   trigger-pipeline.yaml: |
-    apiVersion: tekton.dev/v1beta1
+    apiVersion: tekton.dev/v1
     kind: PipelineRun
     metadata:
       generateName: {{ include "quarkus-build.name" . }}-build-
@@ -25,8 +25,10 @@ data:
           value: {{ include "quarkus-build.name" . }}
       pipelineRef:
         name: {{ include "quarkus-build.name" . }}-build
-      serviceAccountName: pipeline
-      timeout: 1h0m0s
+      taskRunTemplate:
+        serviceAccountName: pipeline
+      timeouts:
+        pipeline: 1h0m0s
       workspaces:
         - name: source-folder
           volumeClaimTemplate:
