--- a/template.yaml
+++ b/template.yaml
@@ -193,7 +193,7 @@ spec:
   output:
     links:
       - title: Source Code Repository
-        url: {{ '${{ steps.publish.output.remoteUrl }}' }}
+        url: "{{ '${{ steps.publish.output.remoteUrl }}' }}"
       - title: Open Component in catalog
         icon: catalog
-        entityRef: {{ '${{ steps.register.output.entityRef }}' }}
+        entityRef: "{{ '${{ steps.register.output.entityRef }}' }}"
